[package]
name = "arowss"
description = "The code to integrate all payload components together."
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bmp388 = { git = "https://github.com/ibutra/bmp388.git" }
chrono = { version = "0.4", features = ["serde"] }
ina219 = { version = "0.2" }
linux-embedded-hal = { version = "0.4" }
nmea = { version = "0.7", features = ["std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tokio-serial = "5.4"

[[bin]]
name = "air_side"
