[package]
name = "arowss"
description = "The code to integrate all payload components together."
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bmp388 = { git = "https://github.com/ibutra/bmp388.git" }
chrono = { version = "0.4", features = ["serde"] }
ina219 = { version = "0.2" }
linux-embedded-hal = { version = "0.4" }
nmea = { version = "0.7", features = ["std", "serde"] }
rppal = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
num-traits = "0.2"
num-derive = "0.4"
tracing-subscriber = "0.3.19"
tracing = "0.1"
serialport = "4.7"
thiserror = "2.0"
byteorder-lite = "0.1.0"
