[package]
name = "arowss"
description = "The code to integrate all payload components together."
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aerospace-rocketry-lib = { git = "https://github.com/unl-rocketry/aerospace-rocketry-lib.git" }
linux-embedded-hal = { version = "0.4" }
nmea = { version = "0.7", features = ["std", "serde"] }
rppal = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["full"] }
num-traits = "0.2"
num-derive = "0.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1"
serialport = { version = "4.9", default-features = false }
thiserror = "2.0"
bmp581 = "0.1.0"
hts221 = "0.3.0"
embedded-hal-bus = { version = "0.3.0", features = ["std"] }
bno055 = { version = "0.4.0", features = ["std", "serde"] }
embedded-hal = "1.0.0"
embedded-hal-compat = "0.13.0"
chrono = "0.4.44"
